Bug 839029 - Don't repaint default button if disabled or inactive. r=mstange, r=josh